[package]
name = "reloaded3_common_hash_cache"
version = "0.1.0"
edition = "2021"
description = "A hash cache to verify integrity of mod packages"
repository = "https://github.com/TheBestAstroNOT/reloaded3_common_hash_cache"
license-file = "LICENSE"
include = ["src/**/*"]
readme = "README.MD"

[features]
default = ["std"]
std = []
# Feature for enabling C library exports.
c-exports = []
[dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.7.0"


# Benchmark Stuff
[[bench]]
name = "my_benchmark"
path = "benches/my_benchmark/main.rs"
harness = false
